@@ -1,18 +1,21 @@
 //
 // System.Security.Permissions.ReflectionPermission.cs
 //
-// Tim Coleman <tim@timcoleman.com>
+// Authors:
+//	Tim Coleman <tim@timcoleman.com>
+//	Sebastien Pouliot (spouliot@motus.com)
 //
 // Copyright (C) 2002, Tim Coleman
+// Portions (C) 2003 Motus Technologies Inc. (http://www.motus.com)
 //
 
 using System;
 
-namespace System.Security.Permissions
-{
+namespace System.Security.Permissions {
+
 	[Serializable]
-	public sealed class ReflectionPermission : CodeAccessPermission, IUnrestrictedPermission
-	{
+	public sealed class ReflectionPermission : CodeAccessPermission, IUnrestrictedPermission {
+
 		#region Fields
 
 		ReflectionPermissionFlag flags;
@@ -24,12 +27,21 @@ namespace System.Security.Permissions
 
 		public ReflectionPermission (PermissionState state)
 		{
-			throw new NotImplementedException ();
+			switch (state) {
+				case PermissionState.None:
+					flags = ReflectionPermissionFlag.NoFlags;
+					break;
+				case PermissionState.Unrestricted:
+					flags = ReflectionPermissionFlag.AllFlags;
+					break;
+				default:
+					throw new ArgumentException ("Invalid PermissionState");
+			}
 		}
 
 		public ReflectionPermission (ReflectionPermissionFlag flag)
 		{
-			throw new NotImplementedException ();
+			flags = flag;
 		}
 
 		#endregion // Constructors
@@ -37,56 +49,138 @@ namespace System.Security.Permissions
 		#region Properties
 
 		public ReflectionPermissionFlag Flags {
-			[MonoTODO]
-			get { throw new NotImplementedException (); }
-			[MonoTODO]
-			set { throw new NotImplementedException (); }
+			get { return flags; }
+			set { flags = value; }
 		}
 
 		#endregion // Properties
 
 		#region Methods
 
-		[MonoTODO]
 		public override IPermission Copy ()
 		{
-			throw new NotImplementedException ();
+			return new ReflectionPermission (flags);
 		}
 
-		[MonoTODO]
 		public override void FromXml (SecurityElement esd)
 		{
-			throw new NotImplementedException ();
+			if (esd == null)
+				throw new ArgumentNullException ("esd");
+			if (esd.Tag != "IPermission")
+				throw new ArgumentException ("not IPermission");
+			if (!(esd.Attributes ["class"] as string).StartsWith ("System.Security.Permissions.ReflectionPermission"))
+				throw new ArgumentException ("not ReflectionPermission");
+			if ((esd.Attributes ["version"] as string) != "1")
+				throw new ArgumentException ("wrong version");
+
+			if ((esd.Attributes ["Unrestricted"] as string) == "true")
+				flags = ReflectionPermissionFlag.AllFlags;
+			else {
+				flags = ReflectionPermissionFlag.NoFlags;
+				string xmlFlags = (esd.Attributes ["Flags"] as string);
+				if (xmlFlags.IndexOf ("MemberAccess") >= 0)
+					flags |= ReflectionPermissionFlag.MemberAccess;
+				if (xmlFlags.IndexOf ("ReflectionEmit") >= 0)
+					flags |= ReflectionPermissionFlag.ReflectionEmit;
+				if (xmlFlags.IndexOf ("TypeInformation") >= 0)
+					flags |= ReflectionPermissionFlag.TypeInformation;
+			}
 		}
 
-		[MonoTODO]
 		public override IPermission Intersect (IPermission target)
 		{
-			throw new NotImplementedException ();
+			if (target == null)
+				return null;
+			if (! (target is ReflectionPermission))
+				throw new ArgumentException ("wrong type");
+
+			ReflectionPermission o = (ReflectionPermission) target;
+			int n = 0;
+			if (IsUnrestricted ()) {
+				if (o.Flags == ReflectionPermissionFlag.NoFlags)
+					return null;
+				else
+					return o.Copy ();
+			}
+			if (o.IsUnrestricted ()) {
+				if (flags == ReflectionPermissionFlag.NoFlags)
+					return null;
+				else
+					return Copy ();
+			}
+
+			ReflectionPermission p = (ReflectionPermission) o.Copy ();
+			p.Flags &= flags;
+			return ((p.Flags == ReflectionPermissionFlag.NoFlags) ? null : p);
 		}
 
-		[MonoTODO]
 		public override bool IsSubsetOf (IPermission target)
 		{
-			throw new NotImplementedException ();
+			if (target == null)
+				return (flags == ReflectionPermissionFlag.NoFlags);
+
+			if (! (target is ReflectionPermission))
+				throw new ArgumentException ("wrong type");
+
+			ReflectionPermission o = (ReflectionPermission) target;
+			if (IsUnrestricted ())
+				return o.IsUnrestricted ();
+			else if (o.IsUnrestricted ())
+				return true;
+
+			return ((flags & o.Flags) == flags);
 		}
 
-		[MonoTODO]
 		public bool IsUnrestricted ()
 		{
-			throw new NotImplementedException ();
+			return (flags == ReflectionPermissionFlag.AllFlags);
 		}
 
-		[MonoTODO]
 		public override SecurityElement ToXml ()
 		{
-			throw new NotImplementedException ();
+			SecurityElement se = Element (this, 1);
+			if (IsUnrestricted ()) {
+				se.AddAttribute ("Unrestricted", "true");
+			}
+			else {
+				if (flags == ReflectionPermissionFlag.NoFlags)
+					se.AddAttribute ("Flags", "NoFlags");
+				else if ((flags & ReflectionPermissionFlag.AllFlags) == ReflectionPermissionFlag.AllFlags)
+					se.AddAttribute ("Flags", "AllFlags");
+				else {
+					string xmlFlags = "";
+					if ((flags & ReflectionPermissionFlag.MemberAccess) == ReflectionPermissionFlag.MemberAccess)
+						xmlFlags = "MemberAccess";
+					if ((flags & ReflectionPermissionFlag.ReflectionEmit) == ReflectionPermissionFlag.ReflectionEmit) {
+						if (xmlFlags.Length > 0)
+							xmlFlags += ", ";
+						xmlFlags += "ReflectionEmit";
+					}
+					if ((flags & ReflectionPermissionFlag.TypeInformation) == ReflectionPermissionFlag.TypeInformation) {
+						if (xmlFlags.Length > 0)
+							xmlFlags += ", ";
+						xmlFlags += "TypeInformation";
+					}
+					se.AddAttribute ("Flags", xmlFlags);
+				}
+			}
+			return se;
 		}
 
-		[MonoTODO]
 		public override IPermission Union (IPermission other)
 		{
-			throw new NotImplementedException ();
+			if (other == null)
+				return Copy ();
+			if (! (other is ReflectionPermission))
+				throw new ArgumentException ("wrong type");
+
+			ReflectionPermission o = (ReflectionPermission) other;
+			if (IsUnrestricted () || o.IsUnrestricted ())
+				return new ReflectionPermission (PermissionState.Unrestricted);
+
+			ReflectionPermission p = (ReflectionPermission) o.Copy ();
+			p.Flags |= flags;
+			return p;
 		}
 
 		#endregion // Methods
